<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Service Demo</string>
    <string name="start_button_text">Start Service</string>
    <string name="stop_button_text">Service Stopped</string>
    <string name="start_activity_text">Start Activity Work</string>
    <string name="text_box_text">Activity work will appear here</string>
    <string name="stop_activity_text">Stop Activity Work</string>
</resources>
