<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <Button android:text="@string/start_button_text" android:id="@+id/startButton" android:layout_width="match_parent" android:layout_height="wrap_content"></Button>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/stopButton" android:text="@string/stop_button_text" android:enabled="false"></Button>
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/frameLayout1">
        <Button android:text="@string/start_activity_text" android:layout_height="wrap_content" android:id="@+id/startActivityButton" android:layout_width="match_parent" android:layout_gravity="top"></Button>
        <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_gravity="bottom" android:id="@+id/stopActivityButton" android:text="@string/stop_activity_text" android:enabled="false"></Button>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/textBox" android:layout_gravity="center" android:text="@string/text_box_text" android:editable="false"></EditText>
    </FrameLayout>
</LinearLayout>
